--- a/index.html
+++ b/index.html
@@ -2,23 +2,20 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<title>css-3dÐý×ª</title>
+		<title>3Dæ—‹è½¬</title>
 		<link rel="stylesheet" href="css/index.css" />
 	</head>
 	<body>
-		<!--/*Íâ²ã×î´óÈÝÆ÷*/-->
 		<div class="wrap">
-	<!--	/*°ü¹üËùÓÐÔªËØµÄÈÝÆ÷*/-->
 		<div class="cube">
-			<!--Ç°ÃæÍ¼Æ¬ -->
 			<div class="out_front">
 				<img src="img/1.jpg"  class="pic"/>
 			</div>
-			<!--ºóÃæÍ¼Æ¬ -->
+			<!--ï¿½ï¿½ï¿½ï¿½Í¼Æ¬ -->
 			<div class="out_back">
 				<img src="img/2.jpg"  class="pic"/>
 			</div>
-			<!--×óÍ¼Æ¬ -->
+			<!--ï¿½ï¿½Í¼Æ¬ -->
 			<div class="out_left">
 				<img src="img/3.jpg"  class="pic"/>
 			</div>
@@ -31,7 +28,7 @@
 			<div class="out_bottom">
 				<img src="img/6.jpg"  class="pic"/>
 			</div>
-			<!--Ð¡Õý·½Ìå --> 
+			<!--Ð¡ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ --> 
 			<span class="in_front">
 				<img src="img/7.jpg" class="in_pic" />
 			</span>
